--- a/src/app/pagesdocentes/clase-show/modal-agregar-quizz/modal-agregar-quizz.page.html
+++ b/src/app/pagesdocentes/clase-show/modal-agregar-quizz/modal-agregar-quizz.page.html
@@ -10,7 +10,8 @@
 </ion-header>
 <ion-content class="ion-padding">
   <small>Escribir la pregunta</small>
-  <ion-textarea class="custom-textarea" placeholder="Escribir la pregunta" name="pregunta" [(ngModel)]="quizz.titulo"></ion-textarea>
+  <ion-textarea class="custom-textarea" placeholder="Escribir la pregunta" name="pregunta" [(ngModel)]="quizz.titulo">
+  </ion-textarea>
   <hr class="border">
 
   <ion-textarea class="custom-textarea" placeholder="Respuesta opción 1" name="respuesta1"
