--- a/src/app/pagesdocentes/clase-show/modal-agregar-programa/modal-agregar-programa.page.html
+++ b/src/app/pagesdocentes/clase-show/modal-agregar-programa/modal-agregar-programa.page.html
@@ -59,7 +59,7 @@
 
   <br>
 
-  <ion-button (click)="guardarPrograma()" expand="block">
+  <ion-button (click)="guardarPrograma()" expand="block" class="mt-2">
     <ion-icon name="save-outline" class="me-2"></ion-icon> Guardar
   </ion-button>
 
