--- a/src/app/panel/panel.page.html
+++ b/src/app/panel/panel.page.html
@@ -54,9 +54,9 @@
             </ion-item>
 
             <ion-item class="opcion font-cairo" (click)="irHaPaginas('Cursos', '/panel/perfil-estudiante')" *ngIf="tipouser == 'estudiante'">
-              <ion-icon name="today-outline" slot="start"></ion-icon>
+              <ion-icon name="person-circle-outline" slot="start"></ion-icon>
               <ion-label>
-                <label class="font-cairo" style="padding: 0px; margin: 0px;">Mi perfil</label>
+                <label class="font-cairo" style="padding: 0px; margin: 0px;">Mi cuenta</label>
               </ion-label>
             </ion-item>
 
