--- a/src/app/pagesestudiantes/clase-one/clase-one.page.html
+++ b/src/app/pagesestudiantes/clase-one/clase-one.page.html
@@ -38,7 +38,7 @@
   </ion-list>
 
   <!--Msj no existen preguntas-->
-  <div class="text-center" *ngIf="existePrograma != true">
+  <div class="text-center" *ngIf="existePrograma != true && existeQuizz != true && existePuzzle != true">
     <h5>No existen clases para realizar</h5>
   </div>
 
