--- a/src/app/pagesestudiantes/clases/clases.page.html
+++ b/src/app/pagesestudiantes/clases/clases.page.html
@@ -1,9 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>clases</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content class="ion-padding">
+  <h1>En desarrollo!!</h1>
 </ion-content>
